syntax = "proto3";

package wallet.mobile;
option  go_package = "./mobile;mobile";

import "proto/wallet/mobile/base.proto";

service TransactionService {
  rpc GetTransactionsHistory(GetTransactionsHistoryReq) returns (GetTransactionsHistoryRes);
  rpc GetTransactionInfo(GetTransactionInfoReq) returns (GetTransactionInfoRes);
}

//================================= TYPES ===================================

message Transaction {
  string              id           = 1;
  TransactionStatus   status       = 2;
  TransactionType     type         = 3;
  double              amount       = 4;
  double              fee          = 5;
  int64               time         = 6;
  string              fund         = 7;
  double              last_balance = 8;
  TransactionMetadata metadata     = 9;
}

message TransactionMetadata {
  string service_name   = 1;
  string service_ref_id = 2;
  string description    = 3;
}

//================================= REQUESTS ===================================

message GetTransactionsHistoryReq { PaginationReq pagination = 1; }

message GetTransactionInfoReq { string transaction_id = 1; }

//================================= RESPONSE ===================================

message GetTransactionsHistoryRes {
  repeated Transaction transactions = 1;
  PaginationRes        pagination   = 2;
}

message GetTransactionInfoRes { Transaction transaction = 1; }